--- a/.gitignore
+++ b/.gitignore
@@ -1,107 +1,56 @@
-#
-# NOTE! Don't add files that are generated in specific
-# subdirectories here. Add them in the ".gitignore" file
-# in that subdirectory instead.
-#
-# NOTE! Please use 'git ls-files -i --exclude-standard'
-# command after changing this file, to see if there are
-# any tracked files which get ignored after the change.
-#
-# Normal rules
-#
-.*
+aclocal.m4
+autom4te.cache
+config.h*
+config.h.in
+config.log
+config.status
+config.guess
+config.sub
+config.rpath
+configure
+gst-plugins-base.spec
+gstreamer-libs-uninstalled*.pc
+gstreamer-libs*.pc
+gstreamer-play-uninstalled*.pc
+gstreamer-play*.pc
+libtool
+stamp-h
+stamp-h.in
+stamp-h1
+gst-element-check-*.m4
+ltmain.sh
+missing
+mkinstalldirs
+compile
+install-sh
+depcomp
+autoregen.sh
+ABOUT-NLS
+/INSTALL
+_stdint.h
+
+.deps
+.libs
+*.so
+*.lo
+*.la
 *.o
-*.o.*
-*.a
-*.s
-*.ko
-*.so.dbg
-*.mod.c
-*.i
-*.lst
-*.symtypes
-*.order
-*.elf
-*.bin
-*.tar
-*.gz
-*.bz2
-*.lzma
-*.xz
-*.lz4
-*.lzo
-*.patch
-*.gcno
-modules.builtin
-Module.symvers
-*.dwo
-
-#
-# Top-level generic files
-#
-/tags
-/TAGS
-/linux
-/vmlinux
-/vmlinux-gdb.py
-/vmlinuz
-/System.map
-/Module.markers
-
-#
-# Debian directory (make deb-pkg)
-#
-/debian/
-
-#
-# tar directory (make tar*-pkg)
-#
-/tar-install/
-
-#
-# git files that we don't want to ignore even it they are dot-files
-#
-!.gitignore
-!.mailmap
-
-#
-# Generated include files
-#
-include/config
-include/generated
-arch/*/include/generated
-
-# stgit generated dirs
-patches-*
-
-# quilt's files
-patches
-series
-
-# cscope files
-cscope.*
-ncscope.*
-
-# gnu global files
-GPATH
-GRTAGS
-GSYMS
-GTAGS
-
-*.orig
 *~
-\#*#
+*.bak
+/m4
+Makefile.in
+Makefile
+*.gir
+*.typelib
+*.gc??
 
-#
-# Leavings from module signing
-#
-extra_certificates
-signing_key.priv
-signing_key.x509
-x509.genkey
+Build
+*.user
+*.suo
+*.ipch
+*.sdf
+*.opensdf
+*.DS_Store
 
-# Kconfig presets
-all.config
-
-# Kdevelop4
-*.kdev4
+*.trs
+*.log
