--- a/project.config
+++ b/project.config
@@ -1,6 +1,7 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group user/Eric.park (pjsin)
 	owner = group user/Hyunseok Jung (aronjung)
 	owner = group user/Nexell Jenkins (nxJenkins)
 	owner = group user/SeongO Park (raypark714)
